--- a/paper/hillclimbing.tex
+++ b/paper/hillclimbing.tex
@@ -61,6 +61,9 @@
 \newtheorem{lemma}{Lemma}
 \newtheorem{definition}{Definition}
 
+
+\newcommand*{\vertbar}{\rule[-1ex]{0.5pt}{2.5ex}}
+
 % Leave date blank
 \date{}
 
@@ -101,9 +104,9 @@ Consider the usual regression framework with $p$ features and a response measure
 In recent years, there has been much interest in combining regularization methods to produce models with multiple desired characteristics. Examples include the elastic net (Zou and Hastie 2003), which combines the lasso and ridge penalties, and the sparse group lasso (Simon 2007), which combines the group lasso and lasso penalties. The general form of these regression problems is:
 
 \begin{equation} \label {eq:basic}
-\hat f(\lambda_1, ..., \lambda_k) = \arg \min_f L(\boldsymbol{y}, f (\boldsymbol{X})) + \sum\limits_{i=1}^J \lambda_i P_i(f)
+\hat f(\lambda_1, ..., \lambda_J) = \arg \min_f L(\boldsymbol{y}, f (\boldsymbol{X})) + \sum\limits_{i=1}^J \lambda_i P_i(f)
 \end{equation}
-where $L$ is the loss function, $\{P_i\}_{i=1, ..., k}$ are the penalty functions, and $\{\lambda_i\}_{i=1, ..., J}$ are the regularization parameters.
+where $L$ is the loss function, $\{P_i\}_{i=1, ..., J}$ are the penalty functions, and $\{\lambda_i\}_{i=1, ..., J}$ are the regularization parameters.
 
 Regularization parameters control the degree of various facets of model complexity (e.g. amount of sparsity or smoothness). Often, the goal is to set the parameters to minimize the fitted model's generalization error. One usually estimates this using a training/validation approach (or cross-validation). There one fits a model on a training set $(X_T, \boldsymbol y_T)$ and measures the model's error on a validation set $(X_V, \boldsymbol y_V)$. The goal then is to choose penalty parameters that minimize the validation error, as formulated in the following optimization problem:
 \begin{equation}
@@ -150,7 +153,7 @@ Suppose that we use a training/validation split to select penalty parameters $\b
 
 % For ease of reading, we will use $L_V(\boldsymbol{\lambda})$ to denote $L(\boldsymbol y_V, \hat f(X_V | \boldsymbol{\lambda}))$ since the validation loss is ultimately a function of the penalty parameters.
 
-\eqref{jointopt2} is the explicit, though often unstated, criterion that training/validation methods attempt to minimize to choose penalty parameters. The current standard is to minimize this using an exhaustive grid-search. Grid-based methods solve the joint optimization problem by fitting models over a $k$-dimensional grid $G$ in the penalty parameter space --- the computational runtime of grid-based methods grows exponentially with the number of parameters. While the approach is simple and powerful for a single penalty parameter, optimizing even moderate dimensional functions (3+) via exhaustive grid search is inefficient (and becomes quickly completely intractable).  In addition, \eqref{jointopt2} is generally a continuous, piecewise-smooth problem. Using an exhaustive search ignores information available from the smoothness of the surface. 
+\eqref{jointopt2} is the explicit, though often unstated, criterion that training/validation methods attempt to minimize to choose penalty parameters. The current standard is to minimize this using an exhaustive grid-search. Grid-based methods solve the joint optimization problem by fitting models over a $k$-dimensional grid $G$ in the penalty parameter space --- the computational runtime of grid-based methods grows exponentially with the number of parameters. While the approach is simple and powerful for a single penalty parameter, optimizing even moderate dimensional functions (3+) via exhaustive grid search is inefficient (and quickly becomes completely intractable).  In addition, \eqref{jointopt2} is generally a continuous, piecewise-smooth problem. Using an exhaustive search ignores information available from the smoothness of the surface. 
 
 We propose leveraging the tools of smooth optimization to solve \eqref{jointopt2}. In particular we discuss iterative methods, based on walking in a descent direction until convergence to a local minimum. In the simple case where the criterion is differentiable with respect to the penalty parameters, it is straightforward to use gradient descent or some variant thereof. We show that, with some slight tweaks, gradient descent can be applied in situations where the penalty is only differentiable when restricted to directions involving an active set.
 
@@ -169,7 +172,7 @@ Of course, the joint optimization problem is non-convex and therefore our method
 
 \subsection{Algorithm}
 
-Many joint optimization problems can be solved using gradient descent. The procedure is relatively simple, at least in principle. To find the regularization parameters $\lambda$ that minimize the validation criterion $L \Big( \boldsymbol{y}_V, f_{\hat{\theta}(\boldsymbol{\lambda})}(\boldsymbol{X}_V) \Big )$,
+Many joint optimization problems can be solved using gradient descent. The procedure is relatively simple, at least in principle. To find the regularization parameters $\boldsymbol{\lambda}$ that minimize the validation criterion $L \Big( \boldsymbol{y}_V, f_{\hat{\theta}(\boldsymbol{\lambda})}(\boldsymbol{X}_V) \Big )$,
 we initialize gradient descent at some point $\boldsymbol{\lambda}^{(0)}$ and take a step in the direction opposite of the gradient at each iteration.
 
 \begin{center}
@@ -202,30 +205,36 @@ Recall that $\hat \theta(\lambda)$ is the minimizer of the training criterion:
 \hat{\theta}(\boldsymbol{\lambda}) = \arg \min_{\theta \in \Theta} L(\boldsymbol{y}_T, f_\theta (\boldsymbol{X}_T)) + \sum\limits_{i=1}^J \lambda_i P_i(\theta)
 \label{inneroptproblem}
 \end{equation}
-Our approach is to find a locally equivalent function $\tilde{\theta}(\boldsymbol{\lambda})$ that is the minimizer of the training criterion over a subspace $\tilde \Theta(\lambda)$ in which the training criterion is twice continuously differentiable. That is, for a given $\lambda$, we find some neighborhood $W$ containing $\lambda$ such that for every $\lambda' \in W$
+Our approach is to find a locally equivalent function $\tilde{\theta}(\boldsymbol{\lambda})$ that is the minimizer of the training criterion over a subspace $\tilde \Theta(\boldsymbol{\lambda})$ in which the training criterion is twice continuously differentiable. That is, for a given $\boldsymbol{\lambda}$, we find some neighborhood $W$ containing $\lambda$ such that for every $\boldsymbol{\lambda}' \in W$
 \begin{equation}
 \tilde{\theta}(\boldsymbol{\lambda}') = \arg \min_{\theta \in \tilde\Theta(\lambda)} L(\boldsymbol{y}_T, f_\theta (\boldsymbol{X}_T)) + \sum\limits_{i=1}^J \lambda'_i P_i(\theta) = \hat{\theta}(\boldsymbol{\lambda}')
 \end{equation}
 
-Finding the gradient descent direction is straightforward once we have the twice differentiable function $\tilde \theta(\lambda)$. To find $\frac{\partial}{\partial \lambda} \hat{\theta}(\boldsymbol{\lambda})$, we perform implicit differentiation on the gradient condition
+Finding the gradient descent direction is straightforward once we have the twice differentiable function $\tilde \theta(\boldsymbol{\lambda})$. To find $\frac{\partial}{\partial \boldsymbol{\lambda}} \hat{\theta}(\boldsymbol{\lambda})$, we perform implicit differentiation on the gradient condition
 \begin{equation}
 \nabla_\theta \Big ( L(\boldsymbol{y}_T, f_\theta (\boldsymbol{X}_T)) + \sum\limits_{i=1}^J \lambda_i P_i(\theta) \Big ) \Big |_{\theta = \tilde \theta(\boldsymbol{\lambda})} = \vec{0}
 \end{equation}
-and get the following equation
+and, assuming the hessian of the training criterion is nonsingular, we get the following equation
 \begin{equation}
-\frac{\partial}{\partial \lambda} \tilde{\theta}(\boldsymbol{\lambda}) = 
-\Big [ \nabla_\theta^2 \big (  L(\boldsymbol{y}_T, f_\theta (\boldsymbol{X}_T))  +  \sum\limits_{i=1}^J \lambda_i P_i(\theta)  \big )  \Big ]^{-1} \Big (\nabla_\theta P_1(\theta) \Big | \nabla_\theta P_2(\theta)\Big |  ... \Big |  \nabla_\theta P_J(\theta) \Big ) \bigg |_{\theta = \tilde \theta(\boldsymbol{\lambda})}
+\frac{\partial}{\partial \boldsymbol{\lambda}} \tilde{\theta}(\boldsymbol{\lambda}) = 
+- \left [ \nabla_\theta^2 \big (  L(\boldsymbol{y}_T, f_\theta (\boldsymbol{X}_T))  +  \sum\limits_{i=1}^J \lambda_i P_i(\theta)  \big )  \right ]^{-1}
+\left (
+\begin{array}{cccc}
+\vertbar & \vertbar &        & \vertbar \\
+\nabla_\theta P_1(\theta) & \nabla_\theta P_2(\theta) &  ... &  \nabla_\theta P_J(\theta) \\
+\vertbar & \vertbar &        & \vertbar 
+\end{array}
+\right ) \bigg |_{\theta = \tilde \theta(\boldsymbol{\lambda})}
 \label{implicitDifferentiation}
 \end{equation}
-%% CHECK ABOVE EQUATION
-Plugging (\ref{implicitDifferentiation}) into (\ref{chainrule}) gives us the gradient descent direction for our procedure.
+Plugging (\ref{implicitDifferentiation}) into (\ref{chainrule}) gives us the gradient descent direction.
 
 We now present the formal requirements for the gradient to exist almost everywhere. First, we define some terminology.
 
 \begin{definition}
 Given a real-valued function $L$ and a point $\eta$ in its domain, let $U$ be the set of vectors such that the directional derivatives of $L$ at the point $\eta$ along $u \in U$ exist. The space spanned by $U$ is the ``differentiable space" of $L$ at $\eta$:
 \begin{equation}
-\Omega^{(L)}(\eta) = \text{span} \Big(\Big\{ \delta | \lim_{\epsilon \rightarrow 0} \frac{L(\eta + \epsilon \delta) - L(\eta)}{\epsilon} \Big\}\Big)
+\Omega^{(L)}(\eta) = \text{span} \Big(\Big\{ \delta | \lim_{\epsilon \rightarrow 0} \frac{L(\eta + \epsilon \delta) - L(\eta)}{\epsilon} \text{ exists } \Big\}\Big)
 \end{equation}
 \end{definition}
 
@@ -238,17 +247,21 @@ $S$ is a ``local optimality space" for a real-valued function $L(\theta, \lambda
 
 The gradient exists almost everywhere if three conditions are satisfied. For notational convenience, let the training criterion be denoted as
 \begin{equation}
-L_T(\theta, \lambda) = L(\boldsymbol{y}_T, f_\theta (\boldsymbol{X}_T)) + \sum\limits_{i=1}^J \lambda_i P_i(\theta)
+L_T(\theta, \boldsymbol{\lambda}) = L(\boldsymbol{y}_T, f_\theta (\boldsymbol{X}_T)) + \sum\limits_{i=1}^J \lambda_i P_i(\theta)
 \end{equation}
-First, we require that the differentiable space of $L_T(\cdot, \lambda)$ at $\hat \theta(\lambda)$ is a local optimality space for some neighborhood $W$ around $\lambda$. This condition formalizes the previously mentioned $\tilde \Theta(\lambda)$ and ensures that we can always restrict gradient descent to a smooth space.
+First, we require that for almost every $\boldsymbol{\lambda}$, the differentiable space of $L_T(\cdot, \boldsymbol{\lambda})$ at $\hat \theta(\boldsymbol{\lambda})$ is a local optimality space for some neighborhood $W$ containing $\boldsymbol{\lambda}$, or stated mathematically as:
+\begin{equation}
+\arg \min_\theta L_T(\theta, \boldsymbol{\lambda}') = \arg \min_{\theta \in \Omega^{L_T(\cdot, \boldsymbol{\lambda})}(\hat \theta(\boldsymbol{\lambda}))} L_T(\theta, \boldsymbol{\lambda}') \forall \boldsymbol{\lambda}' \in W
+\end{equation}
+This condition formalizes the previously mentioned $\tilde \Theta(\boldsymbol{\lambda})$ and ensures that we can always restrict gradient descent to a smooth space.
 
-For example, the lasso regression satisfies this condition. As $\lambda$ increases, the lasso regression coefficients $\hat \theta(\lambda)$ are set to zero. Since the lasso penalty is defined as 
+For example, the lasso regression satisfies this condition. The lasso penalty is defined as
 \begin{equation}
 P(\theta) = \sum_{i=1}^{p} | \theta_i |
 \end{equation}
-the differentiable space of $L_T(\cdot, \lambda)$ at $\hat \theta(\lambda)$ is only differentiable along directions spanned by the nonzero elements of $\hat \theta(\lambda)$. Furthermore, there exist a finite number of $\lambda$ values such that elements of $\hat \theta(\lambda)$ become zero as $\lambda$ increases, which means that within some neighborhood $W$ of $\lambda$, the nonzero elements of $\hat \theta(\lambda)$ stay constant. Therefore, the differentiable space is a local optimality space. Other joint optimization problems that satisfy this condition include the generalized lasso and all the examples used in this paper.
+Then $L_T(\cdot, \lambda)$ at $\hat \theta(\lambda)$ is differentiable only along the directions spanned by the nonzero elements of $\hat \theta(\lambda)$. Furthermore, lasso regression sets elements of $\hat \theta(\lambda)$ to zero as $\lambda$ increases and it has been shown that there exists a finite number of $\lambda$ values in which this transition occurs. In other words, for almost every $\lambda$, there is some neighborhood $W$ in which the nonzero indices of $\hat \theta(\lambda)$ stay constant. Therefore, the differentiable space is a local optimality space. Other joint optimization problems that satisfy this condition include the generalized lasso and all the examples used in this paper.
 
-The two other conditions ensure that $\frac{\partial}{\partial \lambda} \tilde \theta(\lambda)$ exists. For (\ref{implicitDifferentiation}) to be valid, we need $L_T$ to be twice continuously differentiable and $\nabla_\theta^2 L_T(\theta, \lambda)$ to be invertible almost everywhere. As a side note, in cases where $\nabla_\theta^2 L_T(\theta, \lambda)$ is singular, such as the lasso for high-dimensional datasets, one can simply add a ridge penalty with a small coefficient.
+Finally, we have two other conditions to ensure that (\ref{implicitDifferentiation}) is valid. For almost every $\boldsymbol{\lambda}$, the training criterion $L_T$ restricted to $\Omega^{L_T}(\hat \theta(\lambda), \lambda)$ must be twice continuously differentiable and $\nabla_\theta^2 L_T(\theta, \lambda)$ must be invertible.
 
 Under these three conditions, we can prove that the validation loss $L(\boldsymbol{y_V}, f_{\hat \theta(\boldsymbol{\lambda})}(\boldsymbol{X_V}))$ is continuously differentiable almost everywhere. The proof for the following theorem is included in Appendix A.
 
@@ -271,14 +284,14 @@ Then the validation loss $L(\boldsymbol{y_V}, f_{\hat \theta(\boldsymbol{\lambda
 \end{equation}
 where
 \begin{equation}
-\tilde{\theta}(\boldsymbol{\lambda}) = \arg \min_{\theta \in \Omega^{(\boldsymbol{\lambda})}} L_T(\theta , \boldsymbol{\lambda})
+\tilde{\theta}(\boldsymbol{\lambda}) = \arg \min_{\theta \in \Omega^{(L_T)}(\hat \theta(\boldsymbol{\lambda}), \boldsymbol{\lambda})} L_T(\theta , \boldsymbol{\lambda})
 \label{restrictedmodelparams}
 \end{equation}
 
 \label{thethrm}
 \end{theorem}
 
-As long as a joint optimization problem satisfies conditions described in the theorem, we can use gradient descent to solve it. As before, gradient descent is initialized at some point $\lambda^{(0)}$. To calculate the gradient at each iteration $k$, we solve the inner optimization problem for $\hat \theta(\lambda^{(k)})$, which determines the differentiable space of the training criterion at that point. We then consider the restricted minimization problem $\tilde \theta(\lambda^{(k)})$ which has a differentiable criterion by construction. Using (\ref{implicitDifferentiation}), we calculate $\frac{\partial}{\partial \boldsymbol{\lambda}} \tilde{\theta}(\boldsymbol{\lambda})|_{\boldsymbol{\lambda} = \boldsymbol{\lambda}^{(k)}}$ and obtain the gradient descent direction using the chain rule. The gradient descent method is described in detail below:
+As long as a joint optimization problem satisfies conditions described in the theorem, we can use gradient descent to solve it. As before, gradient descent is initialized at some point $\boldsymbol{\lambda}^{(0)}$. To calculate the gradient at each iteration $k$, we solve the inner optimization problem for $\hat \theta(\boldsymbol{\lambda}^{(k)})$, which determines the differentiable space of the training criterion at that point. We then consider the restricted minimization problem $\tilde \theta(\boldsymbol{\lambda}^{(k)})$ which has a differentiable criterion by construction. Using (\ref{implicitDifferentiation}), we calculate $\frac{\partial}{\partial \boldsymbol{\lambda}} \tilde{\theta}(\boldsymbol{\lambda})|_{\boldsymbol{\lambda} = \boldsymbol{\lambda}^{(k)}}$ and obtain the gradient descent direction using the chain rule. The gradient descent method is described in detail below:
 
 \begin{center}
   \fbox{
@@ -331,13 +344,14 @@ $\tilde \beta(\lambda^{(k)})$ must satisfy the following gradient condition
 + \lambda^{(k)} sgn(\tilde{\boldsymbol{\beta}} (\lambda^{(k)}))
 \label{lassoGradient}
 \end{equation}
-and implicit differentiation of (\ref{lassoGradient}) gives us
+Assuming that $(\boldsymbol{X}_T^T\boldsymbol{X}_T)^{-1} $ exists, implicit differentiation of (\ref{lassoGradient}) gives us
 \begin{equation}
 \frac{\partial}{\partial \lambda} \tilde \beta(\lambda) \big |_{\lambda = \lambda^{(k)}} = (\boldsymbol{X}_T^T\boldsymbol{X}_T)^{-1} sgn(\tilde{\boldsymbol{\beta}} (\lambda^{(k)}))
 \end{equation}
+Note that we can ensure having an invertible matrix by adding a ridge penalty with a small regularization parameter to the training criterion.
 The gradient descent direction for the $k$th iteration is therefore
 \begin{equation}
-\nabla_{\boldsymbol{\lambda}} L(\boldsymbol{y_V}, f_{\hat \theta(\boldsymbol{\lambda})}(\boldsymbol{X_V})) |_{\boldsymbol{\lambda} = \boldsymbol{\lambda}^{(k)}} =
+\nabla_{\lambda} L(\boldsymbol{y_V}, f_{\hat \theta(\lambda)}(\boldsymbol{X_V})) |_{\lambda = \lambda^{(k)}} =
 \big (\boldsymbol{X}_V(\boldsymbol{X}_T^T\boldsymbol{X}_T)^{-1} sgn(\tilde{\boldsymbol{\beta}} (\lambda^{(k)})) \big )^T
 (\boldsymbol{y}_V - \boldsymbol{X}_V \tilde{\boldsymbol{\beta}} (\lambda^{(k)}))
 \end{equation}
